[package]
name = "abl-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5" }
crossterm = "0.27.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
ratatui = "0.25.0"
tree-sitter = "0.20.10"

[build-dependencies]
cc="*"
